<resources>
    <string name="app_name">轻聊</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //nav
    <string name="nav_1">个人资料</string>
    <string name="nav_2">通知类型</string>
    <string name="nav_3">免打扰</string>
    <string name="nav_4">屏蔽名单</string>
    <string name="nav_5">个性主题</string>
    <string name="nav_6">多种语言</string>
    <string name="nav_7">修改密码</string>
    <string name="nav_8">用户登出</string>


    //theme
    <string name="theme_0">默认主题</string>
    <string name="theme_1">天空蓝</string>
    <string name="theme_2">温馨粉</string>
    <string name="theme_3">中国红</string>
    <string name="theme_4">原谅绿</string>
    <string name="theme_5">果粒橙</string>
    <string name="theme_6">优雅紫</string>
    <string name="theme_7">夜间模式</string>

    //notify_type
    <string name="notify_type_0">默认设置</string>
    <string name="notify_type_1">不展示通知</string>
    <string name="notify_type_2">通知栏</string>
    <string name="notify_type_3">声音</string>
    <string name="notify_type_4">震动</string>
    <string name="notify_type_5">呼吸灯</string>


    //common
    <string name="long_press_add">长按添加</string>
    <string name="long_press_delete">长按删除</string>

    <string name="save">保存</string>
    <string name="update_data_success">数据更新成功</string>
    <string name="Tip">提示：</string>
    <string name="loading">正在加载中。。。</string>
    <string name="loading_fail">加载失败</string>

    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>

    <string name="out_success">移出成功</string>
    <string name="out_fail">移出失败</string>

    <string name="you_picked">你选择了：</string>

    <string name="ok">确定</string>

    <string name="cancel">取消</string>
    <string name="album">相册</string>
    <string name="camera">拍照</string>

    <string name="black_message">屏蔽消息</string>

    //add_friend
    <string name="add_friend">添加好友</string>
    <string name="into_chat">发起聊天</string>
    <string name="add_reason">添加原因</string>
    <string name="add_reason1">添加好友的原因</string>
    <string name="send_add_reason">发送加好友请求</string>

    //add_group_number
    <string name="no_one_can_add">没有可添加的好友</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="add_this_user">添加该成员</string>
    <string name="delete_this_user">删除该成员</string>
    <string name="you_are_not_group_owner">你不是群主</string>
    <string name="cannot_delete_yourself">不能删除自己</string>

    //blacklist
    <string name="no_blacklist">没有黑名单用户</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>

    //chat
    <string name="send">发送</string>
    <string name="send_fail">发送失败</string>

    //create_group
    <string name="create_group">创建群组</string>
    <string name="input_group_name">填写群名称</string>
    <string name="input_group_description">填写群介绍</string>
    <string name="create">创建</string>
    <string name="create_success">创建成功</string>
    <string name="create_fail">创建失败</string>

    //disturb_list
    <string name="no_disturb_user">没有免打扰用户</string>
    <string name="into_disturb_global">设置全局面免打扰</string>
    <string name="out_disturb_global">解除全局面免打扰</string>

    //find_user
    <string name="find_user">查找用户</string>
    <string name="input_find_username">输入查找对象的账号</string>
    <string name="find">查找</string>
    <string name="username_cannot_be_null">账号不能为空</string>
    <string name="cannot_find_this_uer">未找到该对象</string>

    <string name="he_is_not_your_friend">该对象不是你的好友</string>
    <string name="friend_cannot_into_blacklist">好友不能移入黑名单</string>

    //friend_reason
    <string name="friend_request">好友请求</string>
    <string name="accept_friend_request">接受对方好友请求</string>
    <string name="refuse_friend_request">拒绝对方好友请求</string>
    <string name="input_refuse_reason">填写拒绝理由</string>

    //group_info
    <string name="add">添加</string>
    <string name="group_info">群组资料</string>
    <string name="into_group_talk">进入群聊</string>
    <string name="see_group_members">查看成员</string>
    <string name="add_group_members">添加成员</string>
    <string name="into_disturb">移入免打扰</string>
    <string name="out_disturb">移出免打扰</string>
    <string name="exit_group">退出该群</string>
    <string name="exit_group_success">退群成功</string>
    <string name="exit_group_fail">退群失败</string>


    <string name="group">群组</string>
    <string name="friend">好友</string>
    <string name="other">其他</string>
    <string name="user">用户</string>


    //login
    <string name="welcome">欢迎使用</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>

    <string name="password_too_short">密码太短</string>
    <string name="password_not_match">密码确定错误</string>

    <string name="input_username">输入账号</string>
    <string name="input_password">输入密码</string>
    <string name="input_password2">确认密码</string>
    <string name="save_info">保存信息</string>
    <string name="forget_password">忘记密码</string>


    //main
    <string name="message">消息</string>
    <string name="contacts">通讯录</string>
    <string name="discover">发现</string>

    <string name="night_model">夜间模式</string>
    <string name="light_model">日间模式</string>
    <string name="exit">退出</string>


    <string name="invite_accepted">接受了你的好友邀请</string>
    <string name="invite_declined">拒绝了你的好友邀请</string>
    <string name="reason">原因：</string>
    <string name="contact_deleted">将你从好友中删除</string>

    <string name="invite_success">申请成功</string>
    <string name="invite_fail">申请失败</string>

    <string name="declined_success">拒绝成功</string>
    <string name="declined_fail">拒绝失败</string>

    //info
    <string name="name">名称：</string>
    <string name="avatar">头像：</string>
    <string name="members">成员：</string>
    <string name="description">介绍：</string>
    <string name="username">账号：</string>
    <string name="nickname">昵称：</string>
    <string name="signature">签名：</string>
    <string name="gender">性别：</string>
    <string name="birthday">生日：</string>
    <string name="region">地址：</string>


    //use_setting

    <string name="use_setting">用户设置</string>
    <string name="input_note">输入新备注</string>
    <string name="update_note">修改备注</string>
    <string name="out_blacklist">移出屏蔽名单</string>
    <string name="delete_friend">删除好友</string>

    //show_logout
    <string name="logout_notify">登出通知</string>

    //update_avatar
    <string name="update_avatar">修改头像</string>
    <string name="download_bitmap">存到本地</string>
    <string name="update_bitmap">更新头像</string>

    //update_group
    <string name="update_group_info">修改群资料</string>
    <string name="update_group_name">修改群名称</string>
    <string name="update_group_description">修改群介绍</string>

    //update_my_info
    <string name="update_my_info">编辑资料</string>
    <string name="input_nickname">输入昵称</string>
    <string name="input_signature">输入签名</string>
    <string name="input_birthday">输入生日/例如：20160101</string>
    <string name="input_region">输入地址</string>

    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">未知</string>

    //update_password
    <string name="input_password_old">输入旧密码</string>
    <string name="input_password_new">输入新密码</string>
    <string name="update_password">确认修改</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="input_password_string">输入字符串匹配密码</string>
    <string name="assertEquals_password">尝试匹配</string>
    <string name="assertEquals_success">匹配成功</string>
    <string name="assertEquals_fail">匹配失败</string>

    //user_avatar
    <string name="see_avatar">查看头像</string>
    <string name="user_info">用户资料</string>
    <string name="bitmap_is_null">图片为空</string>
    <string name="save_success">保存成功</string>


    //fg1
    <string name="no_chat">还没有聊天</string>
    <string name="change_isRead">转变已读</string>
    <string name="delete_message">删除聊天</string>
    //fg2
    <string name="no_friend">您还没有好友。</string>
    <string name="no_group">您还没有群组。</string>

    //fg3
    <string name="version_update">版本更新</string>
    <string name="call_developer">联系开发者</string>
    <string name="goto_web">进入官网</string>



    //gallery
    <string name="gallery_all_folder">所有图片</string>
    <string name="gallery_shoot">拍摄照片</string>
    <string name="gallery_finish">( %1$d / %2$d )完成</string>
    <string name="gallery_gallery">相册</string>
    <string name="gallery_send">发送</string>
    <string name="gallery_photo_num">%d 张</string>
    <string name="block_group_message">屏蔽群消息</string>


</resources>
