<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_nav_1"
            android:title="@string/nav_1" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_nav_2"
            android:title="@string/nav_2" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/ic_nav_3"
            android:title="@string/nav_3" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/ic_nav_4"
            android:title="@string/nav_4" />
    </group>
    <group android:id="@+id/group">
        <item
            android:id="@+id/nav_5"
            android:icon="@drawable/ic_nav_5"
            android:title="@string/nav_5" />
        <item
            android:id="@+id/nav_6"
            android:icon="@drawable/ic_nav_6"
            android:title="@string/nav_6" />
        <item
            android:id="@+id/nav_7"
            android:icon="@drawable/ic_nav_7"
            android:title="@string/nav_7" />
        <item
            android:id="@+id/nav_8"
            android:icon="@drawable/ic_nav_8"
            android:title="@string/nav_8" />
        <item
            android:id="@+id/nav_9"
            android:title="" />
    </group>


</menu>
