<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_notify_type"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?app_bg"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/nav_2"
        app:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/bt_notify_type_0"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_selector"
        android:text="@string/notify_type_0"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_notify_type_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/notify_type_1"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_notify_type_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/notify_type_2"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_notify_type_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/notify_type_3"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_notify_type_4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/notify_type_4"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />
    <Button
        android:id="@+id/bt_notify_type_5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/notify_type_5"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

</LinearLayout>