<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.wzm.tasking.activity.UpdatePassword">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_update_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?app_bg"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/nav_7"
        app:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_update_password_old"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_password_old"
        android:inputType="textPassword"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/et_update_password_new"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_password_new"
        android:inputType="textPassword"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt_update_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/update_password"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_update_password_assertEquals"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_password_string"
        android:inputType="text"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt_update_password_assertEquals"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/assertEquals_password"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />
</LinearLayout>
