<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_update_group"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?app_bg"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/update_group_info"
        app:titleTextColor="@color/colorWhite" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_group_name"
        android:inputType="text"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt_update_group_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/update_group_name"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_group_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_group_description"
        android:inputType="text"
        android:minHeight="45dp"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt_update_group_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:minHeight="40dp"
        android:text="@string/update_group_description"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

</LinearLayout>