<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_login_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_username"
        android:inputType="number"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/ch_login_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:checked="false"
            android:text="@string/save_info"
            android:textColor="@color/colorGray_3"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorClarity"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textColor="@color/colorGray_7"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/login"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

</LinearLayout>
