<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_register_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_username"
        android:inputType="number"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/ed_register_password2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_password2"
        android:inputType="textPassword"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/register"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />
</LinearLayout>
