<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_friend_reason"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?app_bg"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/friend_request"
        app:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/accept_invitation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_selector"
        android:text="@string/accept_friend_request"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <Button
        android:id="@+id/declined_invitation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_selector"
        android:text="@string/refuse_friend_request"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_reason"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_refuse_reason"
        android:inputType="text"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_show_add_friend_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:inputType="text"
        android:textColor="@color/colorGray_3"
        android:textSize="13dp" />

</LinearLayout>