<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_friend"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?app_bg"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/add_reason"
        app:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_reason"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:textColor="@color/colorGray_3"
        android:textSize="15dp"
        android:hint="@string/add_reason1" />

    <Button
        android:id="@+id/bt_add_friend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorGray_3"
        android:textSize="15sp"
        android:background="@drawable/bt_selector"
        android:text="@string/send_add_reason" />

</LinearLayout>